tests/compile_fail/gmp_header_must_not_expose_mpfr_or_mpc.cpp
#include <gmpxx_mkII.h>

int main()
{
    mpfrxx::mpfr_class real_value;
    mpfrxx::mpc_class complex_value;
    (void)real_value;
    (void)complex_value;
    return 0;
}
